--- a/firmware/light_sensor.ioc
+++ b/firmware/light_sensor.ioc
@@ -1,162 +1,163 @@
 #MicroXplorer Configuration settings - do not modify
-Mcu.Family=STM32F4
-ProjectManager.MainLocation=Core/Src
-USB_DEVICE.CLASS_NAME_FS=CDC
-ProjectManager.ProjectFileName=light_sensor.ioc
-USART2.IPParameters=VirtualMode
-RCC.CortexFreq_Value=84000000
-ProjectManager.KeepUserCode=true
-Mcu.UserName=STM32F401CCUx
-Mcu.PinsNb=15
-ProjectManager.NoMain=false
-USB_DEVICE.VirtualModeFS=Cdc_FS
-PC13-ANTI_TAMP.GPIO_Label=LED1
-RCC.PLLCLKFreq_Value=84000000
-USB_DEVICE.PID_CDC_FS=0xE1E5
-RCC.PLLQCLKFreq_Value=48000000
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false
-PH1\ -\ OSC_OUT.Mode=HSE-External-Oscillator
-PA11.Mode=Device_Only
-RCC.RTCFreq_Value=32000
-ProjectManager.DefaultFWLocation=true
-ProjectManager.DeletePrevious=true
-RCC.APB1CLKDivider=RCC_HCLK_DIV2
-USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,MANUFACTURER_STRING,PID_CDC_FS,PRODUCT_STRING_CDC_FS,VID
-PinOutPanel.RotationAngle=0
-RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-ProjectManager.StackSize=0x400
-PB5.GPIOParameters=GPIO_PuPd,GPIO_Label
-USB_OTG_FS.low_power_enable=DISABLE
-PA13.Signal=SYS_JTMS-SWDIO
-PA3.Mode=Asynchronous
-Mcu.IP4=USART2
-RCC.FCLKCortexFreq_Value=84000000
-Mcu.IP5=USB_DEVICE
-USB_DEVICE.MANUFACTURER_STRING=Bonny
+File.Version=6
+GPIO.groupedBy=Group By Peripherals
+I2C1.ClockSpeed=100000
+I2C1.I2C_Mode=I2C_Standard
 I2C1.IPParameters=I2C_Mode,ClockSpeed,NoStretchMode
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.IP2=RCC
-Mcu.IP3=SYS
+I2C1.NoStretchMode=I2C_NOSTRETCH_DISABLE
+KeepUserPlacement=false
+Mcu.Family=STM32F4
 Mcu.IP0=I2C1
 Mcu.IP1=NVIC
-PA12.Signal=USB_OTG_FS_DP
-PH0\ -\ OSC_IN.Mode=HSE-External-Oscillator
-Mcu.UserConstants=
-PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
-I2C1.ClockSpeed=100000
-USB_DEVICE.VID=0xDEAD
-ProjectManager.TargetToolchain=Makefile
-USB_DEVICE.PRODUCT_STRING_CDC_FS=Ambient Light Sensor
-I2C1.I2C_Mode=I2C_Standard
-Mcu.ThirdPartyNb=0
-USB_OTG_FS.lpm_enable=DISABLE
-RCC.HCLKFreq_Value=84000000
-VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP4=USART2
+Mcu.IP5=USB_DEVICE
+Mcu.IP6=USB_OTG_FS
 Mcu.IPNb=7
-RCC.I2SClocksFreq_Value=96000000
-ProjectManager.PreviousToolchain=
-RCC.APB2TimFreq_Value=84000000
-PB6.Signal=I2C1_SCL
-RCC.VcooutputI2S=96000000
-PB5.Locked=true
-PB6.Mode=I2C
-Mcu.Pin6=PA12
-Mcu.Pin7=PA13
-ProjectManager.RegisterCallBack=
-Mcu.Pin8=PA14
-Mcu.Pin9=PB3
-RCC.LSE_VALUE=32768
-RCC.AHBFreq_Value=84000000
+Mcu.Name=STM32F401C(B-C)Ux
+Mcu.Package=UFQFPN48
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PH0 - OSC_IN
-GPIO.groupedBy=Group By Peripherals
+Mcu.Pin10=PB6
+Mcu.Pin11=PB7
+Mcu.Pin12=PB8
+Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin14=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin2=PH1 - OSC_OUT
 Mcu.Pin3=PA2
 Mcu.Pin4=PA3
-RCC.VCOI2SOutputFreq_Value=192000000
 Mcu.Pin5=PA11
-ProjectManager.ProjectBuild=false
-RCC.HSE_VALUE=25000000
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+Mcu.Pin6=PA12
+Mcu.Pin7=PA13
+Mcu.Pin8=PA14
+Mcu.Pin9=PB3
+Mcu.PinsNb=15
+Mcu.ThirdPartyNb=0
+Mcu.UserConstants=
+Mcu.UserName=STM32F401CCUx
+MxCube.Version=6.2.1
+MxDb.Version=DB.6.0.21
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PH1\ -\ OSC_OUT.Signal=RCC_OSC_OUT
-PB3.Mode=Trace_Asynchronous_SW
-board=custom
-PC13-ANTI_TAMP.Signal=GPIO_Output
-RCC.VCOOutputFreq_Value=336000000
-PC13-ANTI_TAMP.Locked=true
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-ProjectManager.LastFirmware=true
-ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.26.0
-MxDb.Version=DB.6.0.20
-RCC.APB2Freq_Value=84000000
-I2C1.NoStretchMode=I2C_NOSTRETCH_DISABLE
-ProjectManager.BackupPrevious=false
-MxCube.Version=6.2.0
-RCC.VCOInputFreq_Value=1000000
-PA14.Mode=Trace_Asynchronous_SW
-File.Version=6
-VP_SYS_VS_Systick.Mode=SysTick
-PB7.Signal=I2C1_SDA
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PA13.Mode=Trace_Asynchronous_SW
-ProjectManager.FreePins=false
-NVIC.I2C1_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,PLLCLKFreq_Value,PLLM,PLLN,PLLP,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
-ProjectManager.AskForMigrate=true
-Mcu.Name=STM32F401C(B-C)Ux
-ProjectManager.HalAssertFull=false
-RCC.RTCHSEDivFreq_Value=12500000
-PA2.Signal=USART2_TX
-ProjectManager.ProjectName=light_sensor
-ProjectManager.UnderRoot=false
-Mcu.IP6=USB_OTG_FS
-ProjectManager.CoupleFile=true
-RCC.48MHZClocksFreq_Value=48000000
-PB3.Signal=SYS_JTDO-SWO
-RCC.SYSCLKFreq_VALUE=84000000
-Mcu.Package=UFQFPN48
-PB5.Signal=GPIO_Input
-PA12.Mode=Device_Only
 NVIC.ForceEnableDMAVector=true
-KeepUserPlacement=false
-USART2.VirtualMode=VM_ASYNC
-PB5.GPIO_PuPd=GPIO_PULLUP
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.OTG_FS_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-ProjectManager.CompilerOptimize=6
-ProjectManager.ToolChainLocation=
-RCC.LSI_VALUE=32000
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-PB7.Mode=I2C
-PA11.Signal=USB_OTG_FS_DM
-PA14.Signal=SYS_JTCK-SWCLK
-USB_OTG_FS.VirtualMode=Device_Only
-ProjectManager.HeapSize=0x200
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin14=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-ProjectManager.ComputerToolchain=false
-RCC.HSI_VALUE=16000000
-RCC.PLLP=RCC_PLLP_DIV4
-RCC.PLLQ=7
+NVIC.I2C1_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.OTG_FS_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-Mcu.Pin11=PB6
-Mcu.Pin12=PB7
-PB5.GPIO_Label=TSL_INT
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA11.Mode=Device_Only
+PA11.Signal=USB_OTG_FS_DM
+PA12.Mode=Device_Only
+PA12.Signal=USB_OTG_FS_DP
+PA13.Mode=Trace_Asynchronous_SW
+PA13.Signal=SYS_JTMS-SWDIO
+PA14.Mode=Trace_Asynchronous_SW
+PA14.Signal=SYS_JTCK-SWCLK
+PA2.Mode=Asynchronous
+PA2.Signal=USART2_TX
+PA3.Mode=Asynchronous
+PA3.Signal=USART2_RX
+PB3.Mode=Trace_Asynchronous_SW
+PB3.Signal=SYS_JTDO-SWO
+PB6.Mode=I2C
+PB6.Signal=I2C1_SCL
+PB7.Mode=I2C
+PB7.Signal=I2C1_SDA
+PB8.GPIOParameters=GPIO_Label
+PB8.GPIO_Label=TSL_INT
+PB8.Locked=true
+PB8.Signal=GPIO_Input
+PC13-ANTI_TAMP.GPIOParameters=PinState,GPIO_Label
+PC13-ANTI_TAMP.GPIO_Label=LED1
+PC13-ANTI_TAMP.Locked=true
+PC13-ANTI_TAMP.PinState=GPIO_PIN_SET
+PC13-ANTI_TAMP.Signal=GPIO_Output
+PH0\ -\ OSC_IN.Mode=HSE-External-Oscillator
+PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
+PH1\ -\ OSC_OUT.Mode=HSE-External-Oscillator
+PH1\ -\ OSC_OUT.Signal=RCC_OSC_OUT
+PinOutPanel.RotationAngle=0
+ProjectManager.AskForMigrate=true
+ProjectManager.BackupPrevious=false
+ProjectManager.CompilerOptimize=6
+ProjectManager.ComputerToolchain=false
+ProjectManager.CoupleFile=true
+ProjectManager.CustomerFirmwarePackage=
+ProjectManager.DefaultFWLocation=true
+ProjectManager.DeletePrevious=true
+ProjectManager.DeviceId=STM32F401CCUx
+ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.26.1
+ProjectManager.FreePins=false
+ProjectManager.HalAssertFull=false
+ProjectManager.HeapSize=0x200
+ProjectManager.KeepUserCode=true
+ProjectManager.LastFirmware=true
+ProjectManager.LibraryCopy=0
+ProjectManager.MainLocation=Core/Src
+ProjectManager.NoMain=false
+ProjectManager.PreviousToolchain=
+ProjectManager.ProjectBuild=false
+ProjectManager.ProjectFileName=light_sensor.ioc
+ProjectManager.ProjectName=light_sensor
+ProjectManager.RegisterCallBack=
+ProjectManager.StackSize=0x400
+ProjectManager.TargetToolchain=Makefile
+ProjectManager.ToolChainLocation=
+ProjectManager.UnderRoot=false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false
+RCC.48MHZClocksFreq_Value=48000000
+RCC.AHBFreq_Value=84000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV2
+RCC.APB1Freq_Value=42000000
+RCC.APB1TimFreq_Value=84000000
+RCC.APB2Freq_Value=84000000
+RCC.APB2TimFreq_Value=84000000
+RCC.CortexFreq_Value=84000000
+RCC.FCLKCortexFreq_Value=84000000
+RCC.HCLKFreq_Value=84000000
+RCC.HSE_VALUE=25000000
+RCC.HSI_VALUE=16000000
+RCC.I2SClocksFreq_Value=96000000
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,PLLCLKFreq_Value,PLLM,PLLN,PLLP,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.LSE_VALUE=32768
+RCC.LSI_VALUE=32000
+RCC.PLLCLKFreq_Value=84000000
 RCC.PLLM=25
 RCC.PLLN=336
-Mcu.Pin10=PB5
-RCC.APB1TimFreq_Value=84000000
-PA2.Mode=Asynchronous
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-USB_OTG_FS.IPParameters=VirtualMode,low_power_enable,lpm_enable
-RCC.APB1Freq_Value=42000000
+RCC.PLLP=RCC_PLLP_DIV4
+RCC.PLLQ=7
+RCC.PLLQCLKFreq_Value=48000000
+RCC.RTCFreq_Value=32000
+RCC.RTCHSEDivFreq_Value=12500000
+RCC.SYSCLKFreq_VALUE=84000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.VCOI2SOutputFreq_Value=192000000
+RCC.VCOInputFreq_Value=1000000
+RCC.VCOOutputFreq_Value=336000000
+RCC.VcooutputI2S=96000000
+USART2.IPParameters=VirtualMode
+USART2.VirtualMode=VM_ASYNC
+USB_DEVICE.CLASS_NAME_FS=CDC
+USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,MANUFACTURER_STRING,PID_CDC_FS,PRODUCT_STRING_CDC_FS,VID
+USB_DEVICE.MANUFACTURER_STRING=Bonny
+USB_DEVICE.PID_CDC_FS=0xE1E5
+USB_DEVICE.PRODUCT_STRING_CDC_FS=Ambient Light Sensor
+USB_DEVICE.VID=0xDEAD
 USB_DEVICE.VirtualMode=Cdc
-ProjectManager.CustomerFirmwarePackage=
-ProjectManager.DeviceId=STM32F401CCUx
-ProjectManager.LibraryCopy=0
-PA3.Signal=USART2_RX
-PC13-ANTI_TAMP.GPIOParameters=GPIO_Label
+USB_DEVICE.VirtualModeFS=Cdc_FS
+USB_OTG_FS.IPParameters=VirtualMode,low_power_enable,lpm_enable,Sof_enable
+USB_OTG_FS.Sof_enable=DISABLE
+USB_OTG_FS.VirtualMode=Device_Only
+USB_OTG_FS.low_power_enable=DISABLE
+USB_OTG_FS.lpm_enable=ENABLE
+VP_SYS_VS_Systick.Mode=SysTick
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
+board=custom
